// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unit:EXPORT_LIST_REGEX > exports > should match named export(s) in multi-line statement 1`] = `
{
  "0": "export {
  addFive,
  addFour,
  addThree,
  addTwo,
  squareFive,
  squareFour,
  squareThree,
  squareTwo
}",
  "1": undefined,
  "2": "{
  addFive,
  addFour,
  addThree,
  addTwo,
  squareFive,
  squareFour,
  squareThree,
  squareTwo
}",
  "groups": {
    "exports": "{
  addFive,
  addFour,
  addThree,
  addTwo,
  squareFive,
  squareFour,
  squareThree,
  squareTwo
}",
    "type": undefined,
  },
}
`;

exports[`unit:EXPORT_LIST_REGEX > exports > should match named export(s) in single-line statement 1`] = `
{
  "0": "export { defineBuildConfig, type BuildConfig }",
  "1": undefined,
  "2": "{ defineBuildConfig, type BuildConfig }",
  "groups": {
    "exports": "{ defineBuildConfig, type BuildConfig }",
    "type": undefined,
  },
}
`;

exports[`unit:EXPORT_LIST_REGEX > exports > should match named type export(s) in multi-line statement 1`] = `
{
  "0": "export type {
  JsonObject,
  LiteralUnion,
  Nullable
}",
  "1": "type",
  "2": "{
  JsonObject,
  LiteralUnion,
  Nullable
}",
  "groups": {
    "exports": "{
  JsonObject,
  LiteralUnion,
  Nullable
}",
    "type": "type",
  },
}
`;

exports[`unit:EXPORT_LIST_REGEX > exports > should match named type export(s) in single-line statement 1`] = `
{
  "0": "export type { default as Options }",
  "1": "type",
  "2": "{ default as Options }",
  "groups": {
    "exports": "{ default as Options }",
    "type": "type",
  },
}
`;

exports[`unit:EXPORT_LIST_REGEX > exports > should match nested export statement(s) in declaration file 1`] = `
[
  {
    "0": "export {
    DEFAULTS,
    plugin as default,
    type Options
  }",
    "1": undefined,
    "2": "{
    DEFAULTS,
    plugin as default,
    type Options
  }",
    "groups": {
      "exports": "{
    DEFAULTS,
    plugin as default,
    type Options
  }",
      "type": undefined,
    },
  },
  {
    "0": "export type { default as Options }",
    "1": "type",
    "2": "{ default as Options }",
    "groups": {
      "exports": "{ default as Options }",
      "type": "type",
    },
  },
  {
    "0": "export type { Config, Result }",
    "1": "type",
    "2": "{ Config, Result }",
    "groups": {
      "exports": "{ Config, Result }",
      "type": "type",
    },
  },
]
`;
